<resources>
    <string name="app_name">Smart Paris</string>
    <string name="action_settings">Settings</string>
    <string name="point_a">Départ</string>
    <string name="point_int">Point Intermédaire</string>
    <string name="point_B">Arrivée</string>
    <string name="monument">Monument</string>
    <string name="duree">Temps disponible</string>
    <string name="point_a_hint">Départ</string>
    <string name="point_b_hint">Arrivée</string>
    <string name="point_int_hint">Point Intermédaire</string>
    <string name="calc_button">Calcul</string>
    <string name="monument_hint">Monument</string>
    <string name="calc_button_info">Infos</string>
    <string name="result_path">Resultat</string>
    <string name="result_path_2">Something</string>
    <string name="title_activity_maps">Maps</string>
    <string name="display_map">Afficher mon trajet</string>
    <string name="use_position">Utiliser ma localisation</string>
    <string name="show_alternative_point">+ Point</string>
    <string name="hide_atlernative_point">- Point</string>
    <string name="localisation_impossible">Localisation Impossible</string>
    <string name="display_value_location">%1$d, %2$d</string>
    <string name="type1">Monuments incontournables</string>
    <string name="type2">Musées</string>
    <string name="type3">Lieux de cultes remarquables</string>
    <string name="type4">Parcs et jardins</string>
    <string name="type5">Lieux politiques</string>
    <string name="type6">Autres</string>
    <string name="types">Types de monuments</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="show_details">Etapes du trajet</string>
    <string name="speech">Lancer la lecture</string>
    <string name="stop_speech">Arrêter la lecture</string>
</resources>
