<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.atelierdev.itineraire.monitineraireapp.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_a"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pointA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/point_a_hint"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_B"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pointB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/point_b_hint"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/calculItineraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:onClick="calculTrajet"
            android:text="@string/calc_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/responseView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>



    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="91dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="152dp"-->
        <!--android:layout_marginTop="196dp"-->
        <!--android:text="Go !"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

</android.support.constraint.ConstraintLayout>
